This commit introduces Room persistence library to store fruit data locally.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Fructus">
+        android:theme="@style/Theme.Fructus"
+        android:name=".FructusApplication">
         <activity
             android:name=".MainActivity"
             android:exported="true"
