--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,20 @@
+# Android Studio/IntelliJ
 *.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
+.idea/
+.gradle/
 local.properties
+
+# Build outputs
+/build/
+*/build/
+
+# NDK / CMake / Native
+.externalNativeBuild/
+.cxx/
+
+# OS files
+.DS_Store
+captures/
+
+# Logs
+*.log
