--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Aug 24 22:40:39 PST 2025
-sdk.dir=C\:\\Users\\Jenevieve\\AppData\\Local\\Android\\Sdk
+#Sun Aug 24 21:30:51 PST 2025
+sdk.dir=C\:\\Users\\Jayson\\AppData\\Local\\Android\\Sdk
