--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Aug 25 21:40:46 PST 2025
-sdk.dir=C\:\\Users\\Jenevieve\\AppData\\Local\\Android\\Sdk
+#Mon Sep 01 19:34:19 PST 2025
+sdk.dir=C\:\\Users\\Jayson\\AppData\\Local\\Android\\Sdk
