--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Sep 02 16:10:52 PST 2025
-sdk.dir=C\:\\Users\\Jayson\\AppData\\Local\\Android\\Sdk
+#Wed Sep 03 09:44:37 PST 2025
+sdk.dir=C\:\\Users\\Jenevieve\\AppData\\Local\\Android\\Sdk
