--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Sep 03 09:44:37 PST 2025
-sdk.dir=C\:\\Users\\Jenevieve\\AppData\\Local\\Android\\Sdk
+#Mon Sep 01 12:59:07 CST 2025
+sdk.dir=C\:\\Users\\neoce\\AppData\\Local\\Android\\Sdk
