--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Sep 04 05:46:20 PST 2025
-sdk.dir=C\:\\Users\\Jenevieve\\AppData\\Local\\Android\\Sdk
+#Fri Sep 05 20:31:33 PST 2025
+sdk.dir=C\:\\Users\\Jayson\\AppData\\Local\\Android\\Sdk
